--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
   <body>
     <h1>欢迎使用华成自助编译系统</h1>
     <form action="/startToBuild" enctype="multipart/form-data" method="post">
-      <input type ="file" multiple='mutiple' name="inputFile">
+      <p>宏定义文件:</p><input type ="file" multiple='mutiple' name="inputFile">
       <input type="submit" value="上传" />
     </form>
   </body>
