--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html>
   <body>
     <h1>欢迎使用华成自助编译系统</h1>
+      <p>宏信息:</p>
     <form action="/startToBuild" enctype="multipart/form-data" method="post">
       <p>宏定义文件:</p><input type ="file" multiple='mutiple' name="inputFile">
       <input type="submit" value="上传" />
